--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <h1 class="bg-secondary bg-gradient text-center text-light shadow-lg">Top Albums of the Month</h1>
     
+    <div class="container"></div>
+    <div class="card" style="width: 25rem;">
+        <img src="images/seulgi.jpeg" class="card-img-top" alt="28 reasons">
+        <div class="card-body">
+          <h5 class="card-title text-center"><strong>Seulgi "28 reasons"</strong></h5>
+          <p class="card-text"><em>The album as a whole is a striking balance between dark pop arrangements and smooth R&B with touches of dance beats. 
+            The darkness of tracks “28 Reasons” and “Los Angeles” are intoxicating with their moments of scarcity offset by epic builds nicely spaced throughout the tracks.</em></p>
+          <button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            Ratings
+          </button>
+        </p>
+        <div class="collapse" id="collapseExample">
+          <div class="card card-body text-wrap">
+            NME - 4/5
+            RS - 5/5
+            AOTY - 4/5
+        </div>
+        </div>
+    </div>
 
 </body>
 </html>
