final commit, added all the cards and styling

--- a/index.html
+++ b/index.html
@@ -1,35 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Top Albums Of October</title>
 </head>
+
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
     <h1 class="bg-secondary bg-gradient text-center text-light shadow-lg">Top Albums of the Month</h1>
-    
-    <div class="container"></div>
-    <div class="card" style="width: 25rem;">
-        <img src="images/seulgi.jpeg" class="card-img-top" alt="28 reasons">
-        <div class="card-body">
-          <h5 class="card-title text-center"><strong>Seulgi "28 reasons"</strong></h5>
-          <p class="card-text"><em>The album as a whole is a striking balance between dark pop arrangements and smooth R&B with touches of dance beats. 
-            The darkness of tracks “28 Reasons” and “Los Angeles” are intoxicating with their moments of scarcity offset by epic builds nicely spaced throughout the tracks.</em></p>
-          <button class="btn btn-outline-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-            Ratings
-          </button>
-        </p>
-        <div class="collapse" id="collapseExample">
-          <div class="card card-body text-wrap">
-            NME - 4/5
-            RS - 5/5
-            AOTY - 4/5
-        </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="card text-center" style="height: 25rem">
+                    <span class="border border-4 border-danger rounded"><img src="images/seulgi.jpeg"
+                            class="card-img-top rounded" alt="28 reasons"></span>
+                    <div class="card-body">
+                        <h5 class="card-title text-center"><strong>Seulgi "28 reasons"</strong></h5>
+                        <p class="card-text"><em>The album as a whole is a striking balance between dark pop
+                                arrangements and smooth R&B with touches of dance beats.
+                                The darkness of tracks “28 Reasons” and “Los Angeles” are intoxicating with their
+                                moments of scarcity.</em></p>
+                        <button type="button"
+                            class=" btn-lg btn btn-outline-success">Listen
+                            on Spotify</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card text-center" style="height: 25rem;">
+                    <span class="border border-4 border-danger rounded"><img src="images/beyonce.jpeg"
+                            class="card-img-top rounded" alt="Renaissance"></span>
+                    <div class="card-body">
+                        <h5 class="card-title text-center"><strong>Beyoncé "Renaissance"</strong></h5>
+                        <p class="card-text"><em>Despite its power to unify, dance music can be dismissed as repetition and homogeny. 
+                            Beyoncé's artistic use of it as a medium, however, 
+                            investigates hidden corners of the genre with complex arrangements and atypical melodies.</em></p>
+                        <button type="button"
+                            class=" btn-lg btn-block btn btn-outline-success">Listen
+                            on Spotify</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card text-center" style="height: 25rem;">
+                    <span class="border border-4 border-danger rounded"><img src="images/wormrot.webp"
+                            class="card-img-top rounded" alt="Black Country, New Road"></span>
+                    <div class="card-body">
+                        <h5 class="card-title text-center"><strong>Wormrot "Hiss"</strong></h5>
+                        <p class="card-text"><em>Multidimensional and nuanced grindcore almost seems like an oxymoron, 
+                            but Wormrot proves that it's possible on this record. 
+                            Fantastic set of blistering and dark metal music.
+                            Womrot deliver one of the best Grindcore albums this year.</em></p>
+                        <button type="button"
+                            class=" btn-lg btn-block btn btn-outline-success">Listen
+                            on Spotify</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-
 </body>
+
 </html>
